modules/cli/src/test/resources/bad/reach/globals/grecursion/Recursion08a.scr
module bad.reach.globals.grecursion.Recursion08a;


global protocol Recursion8a(role A, role B)
{
	rec X
	{
		choice at A
		{
			l1() from A to B;
			continue X;
		}
		or
		{
			l2() from A to B;
			continue X;
		}
	}
	l3() from A to B;
}

